Fix modal body scrolling bug on iOS

--- a/client/components/modal/style.scss
+++ b/client/components/modal/style.scss
@@ -4,6 +4,7 @@
 /* This hack is used to prevent the body from scrolling when the modal is showing */
 body.dops-modal-showing {
 	overflow: hidden;
+    position: fixed;
 }
 
 .dops-modal-wrapper {
